Updated project outline v1.1
Added researched material to the references

--- a/Documentation/WIPs/Project_Outline/sdf2_ProjectOutline.tex
+++ b/Documentation/WIPs/Project_Outline/sdf2_ProjectOutline.tex
@@ -28,8 +28,8 @@
 					Module: CS39440 Major Project    \\
 					Supervisor: Thomas Jansen (thj10)    \\
 					                          \\
-					Date: 06/02/2023               \\
-					Version: 1.0(Draft)              
+					Date: 07/02/2023               \\
+					Version: 1.1(Draft)              
 				\end{tabular}
 			\end{table}
 		\end{center}
@@ -63,14 +63,13 @@ The project will use the idea of kanban boards, to monitor and track the progres
 \end{itemize}
 
 \section*{Initial Annotated Bibliography}
-@INPROCEEDINGS{4424632,
-	author={Mantere, Timo and Koljonen, Janne},
-	booktitle={2007 IEEE Congress on Evolutionary Computation}, 
-	title={Solving, rating and generating Sudoku puzzles with GA}, 
-	year={2007},
-	volume={},
-	number={},
-	pages={1382-1389},
-	doi={10.1109/CEC.2007.4424632}}\\
+T. Mantere and J. Koljonen, "Solving, rating and generating Sudoku puzzles with GA," 2007 IEEE Congress on Evolutionary Computation, Singapore, 2007, pp. 1382-1389, doi: 10.1109/CEC.2007.4424632. \\Provides an in depth looks at methods required to solve and generate sudoku puzzles using GA. Will be used a future resource.  \\ \\
+Geem, Z.W. (2007). Harmony Search Algorithm for Solving Sudoku. In: Apolloni, B., Howlett, R.J., Jain, L. (eds) Knowledge-Based Intelligent Information and Engineering Systems. KES 2007. Lecture Notes in Computer Science(), vol 4692. Springer, Berlin, Heidelberg. https://doi.org/10.1007/978-3-540-74819-9\_46  \\Quick look into harmony search algorithm, example of alternative meta-heuristic algorithms used to solve sudoku. Probably will not be used in the project. \\ \\
+Lewis, R. Metaheuristics can solve sudoku puzzles. J Heuristics 13, 387–401 (2007). https://doi.org/10.1007/s10732-007-9012-8
+N. Musliu and F. Winter, "A Hybrid Approach for the Sudoku Problem: Using Constraint Programming in Iterated Local Search," in IEEE Intelligent Systems, vol. 32, no. 2, pp. 52-62, Mar.-Apr. 2017, doi: 10.1109/MIS.2017.29. \\Paper on Constraint programming to solve sudoku. Example of alternative algorithms used to solve sudoku. Probably will not be used in the project. \\ \\
+Russell, S.J. and Norvig, P. (2014) “Beyond Classical Search,” in Artificial Intelligence: A modern approach. Harlow, Essex: Pearson. \\ Contains a subsection on genetic algorithms, helpful for implementing them in the project. \\ \\
+Sturm, Thomas. (2009). Sudoku and A.I... 2. 910-911. \\ Provides a brief summary of a proposed approach to solving sudoku with AI, quite general. Probably not useful further along than initial research \\ \\
+Mahima Dubey, Vijay Kumar, Manjit Kaur, Thanh-Phong Dao, "A Systematic Review on Harmony Search Algorithm: Theory, Literature, and Applications", Mathematical Problems in Engineering, vol. 2021, Article ID 5594267, 22 pages, 2021. https://doi.org/10.1155/2021/5594267 \\ Provides further insight into harmony search algorithm as well as a general summary of meta-heuristic algorithms in the introduction. Probably will not be used past initial research. 
+
 
 \end{document}
