Added some detail
Added dates for final report and demonstration started to update the project description

--- a/Documentation/WIPs/Project_Outline/sdf2_ProjectOutline.tex
+++ b/Documentation/WIPs/Project_Outline/sdf2_ProjectOutline.tex
@@ -29,7 +29,7 @@
 					Supervisor: Thomas Jansen (thj10)    \\
 					                          \\
 					Date: 07/02/2023               \\
-					Version: 1.1(Draft)              
+					Version: 1.2(Release)              
 				\end{tabular}
 			\end{table}
 		\end{center}
@@ -38,11 +38,13 @@
 
 \newpage
 \section*{Project Description}
-The project is based around the solving solitaire games, and for this I have chosen to apply AI to solve the logic based puzzle Sudoku. Sudoku is a well established problem and I have decided to tackle the problem using genetic algorithms. My program will have two different sections to it, solving a Sudoku puzzle and generating Sudoku puzzles with Unique solutions. \\ \\
-The project will use the idea of kanban boards, to monitor and track the progress of the different stories that need to be completed throughout the project. The project will also make use of the agile idea of a heartbeat, which will help keep the pace of the project and allow for adaptation further along in the project, whilst also havings workable code earlier on in the development time. 
+The project is based around the solving solitaire games, and for this I have chosen to apply AI to solve the logic based puzzle Sudoku. Sudoku is a well established problem and has been solved using constraint programming before. Therefore I want to look at alternative methods that can be used to solve it. Heuristics are an alternative way to approach this problem, there are over 2500 google scholar articles around the subject of sudoku and heuristics. There are several heuristics algorithms that could be used, however I have decided to tackle the problem using evolutionary algorithms. 
+
+My program will have two different sections to it, solving a Sudoku puzzle and generating Sudoku puzzles with Unique solutions. \\ \\
+The project will use the idea of kanban boards, to monitor and track the progress of the different stories that need to be completed throughout the project. The project will also make use of the agile idea of a heartbeat, which will help keep the pace of the project and allow for adaptation further along in the project, whilst also having workable code earlier on in the development time. 
 \section*{Proposed Tasks}
 \begin{itemize}
-	\item \textbf{Investigation of genetic algorithms.} Further reading into how to apply genetic algorithms to the problem will need to be done. This will be done by looking at papers on google scholar and looking into papers referenced by the most useful papers found.
+	\item \textbf{Investigation of evolutionary algorithms.} Further reading into how to apply evolutionary algorithms to the problem will need to be done. This will be done by looking at papers on google scholar and looking into papers referenced by the most useful papers found.
 	\item \textbf{Setting up and maintaining version control system and issues board.} The project will use a git repository to hold all the files, and have a backup to any local files. This will be done using GitHub and will also make use of GitHubs issues and project board features, to add and keep track of tasks in the development of the project. 
 	\item \textbf{Spike work on application of genetic algorithm.} Before the theory behind the genetic algorithms can be applied to the problem of solving sudoku, some spike work will need to done first, in how to apply GA in the chosen programming language, which will either be Python or Java.
 	\item \textbf{Development.} In the development of the project, genetic algorithms will be used, the algorithm will need to represent the sudoku in some way, by seperating each block into integers and use these as the different genes the algorithm works with. There will be two main subtasks in the development of the project with the final goal being the linking of these two tasks:
@@ -58,8 +60,8 @@ The project will use the idea of kanban boards, to monitor and track the progres
 	\item \textbf{Sudoku generator.} A stand alone application that can generate unique Sudoku puzzles of a given size and difficulty, this will then be possible to pipe into the solver program. This will include the code, runnable program and instructions on how to use the program. The target time for completing the generator is the 27th of March.
 	\item \textbf{Requirements document.} A document will be produced listing the requirements for the project, listing out the goals for what will count as the project being complete, as well as some non functional requirements as stretch goals. This will later be integrated into the final report. The target time for completion of the requirements document is 20th of February.
 	\item \textbf{Tests.} A set of tests will be created using the requirements, both unit and integration tests, which will be made using Junit or unittest depending on the language decided. There will also be a document produced alongside this, noting the results of the tests and how the different requirements have been met. The document will later be integrated into the final report, and the test code handed in alongside the technical work. The target time for the tests and testing document to be complete would be the 18th of April, however the tests themselves will be made alongside the programs.
-	\item \textbf{Final report.}
-	\item \textbf{Final demonstration.}
+	\item \textbf{Final report.} Due in 5th of May
+	\item \textbf{Final demonstration.} Due end of May
 \end{itemize}
 
 \section*{Initial Annotated Bibliography}
