Update documentation parts

--- a/Documentation/WIPs/Final_report/Design_section.tex
+++ b/Documentation/WIPs/Final_report/Design_section.tex
@@ -17,19 +17,48 @@
 \subsection{Representation of Sudoku Puzzle}
 Representing the puzzle within the program was a key issues within its creation. The representation used within this program is rather simple, for any space that has a integer value, it uses that integer, e.g. for a 9x9 puzzle it could be any number between 1 and 9. However the issues of blank spaces when trying to solve the program still remains, to deal with this I have extended the range to 0-9, where 0 represents a blank space and 1-9 represents 1-9. The integers for the puzzle are stored in a 2D array, looking very similar to an actual sudoku puzzle, as seen in figure 2.
 Due to the simplicity of the representation, it also comes with some notable issues. Namely the size of the search space that this creates for the algorithm, especially as the size of the puzzle increases. 
-\subsection{Selection algorithm}
 
-\subsection{Mutation algorithm}
+mutation of individual
+Puzzle design itself including encoding
 
+find col and row violations
+
+find grid violations
+
+create list of violations
+
+empty spaces
+
+puzzle completion
+
+mutate individual
+
+solver attributes
+
+class diagram for all methods
 \subsection{Hybrid method}
+selection details
+mutation details
+fitness function details
+repair method details
+sort details
 
-\subsection{Fitness function for repair method}
-
-\subsection{Repair algorithm}
 
 \subsection{Multi-objective method}
+selection details
+mutation details
+fitness details
+comparison function
 
-\subsection{Fitness function}
 
 \subsection{Testing program }
+Filewriter
+current puzzle loader
+store generations
+store times
+averages calculation
+
+
 \end{document}
+
+
