--- a/Documentation/WIPs/Final_report/Implementation and testing.tex
+++ b/Documentation/WIPs/Final_report/Implementation and testing.tex
@@ -13,21 +13,21 @@
 
 \section{Implementation and testing}
 
-\subsection{Tools used}
-
-\subsection{Representation}
-	
-\subsection{Mutation}
-
-\subsection{Selection}
-
-\subsection{Repair}
-
-\subsection{Fitness function for repair}
-
-\subsection{Fitness function for multi-objective}
-
 \subsection{Overall implementation issues}
 
+
+
+\subsection{Issues for Hybrid method}
+
+\subsection{Issues for Multi-objective method}
+
+\subsection{Testing approach}
+
+\subsection{Automatic testing}
+
+\subsection{Integration testing}
+
+
 \subsection{Testing table}
+
 \end{document}
