--- a/Documentation/WIPs/Final_report/Background_section.tex
+++ b/Documentation/WIPs/Final_report/Background_section.tex
@@ -1,6 +1,8 @@
 \documentclass[a4paper,11pt]{article}
 
 \usepackage{float}
+\usepackage{graphicx}
+\graphicspath{./Diagrams}
 
 \setlength{\oddsidemargin}{0in}
 \setlength{\evensidemargin}{0in}
@@ -14,6 +16,12 @@
 
 \subsection{Problem description}
 The logic based combinatorial number placement puzzle Sudoku, is a well-established puzzle game which grew popular in Japan in the 1980s. The classic game of Sudoku consists of a 9x9 grid of spaces, which can only be filled with numbers between 1 and 9. Each space in the 3x3 block, vertical and horizontal columns can only have each number between 1 and 9 once. The puzzle is completed when all spaces in the grid have been filled and no earlier rule has been violated. A more generic description of the puzzle, describes a grid of NxN in size, with N grids contained, using numbers between 1-N. []
+\begin{figure}[h]
+	\caption{Example Sudoku puzzle(left), Examples of different violations(right)}
+	\centering
+	\includegraphics[height=5cm, width=10cm]{./Diagrams/violationExample}
+\end{figure}
+
 \subsection{Background}
 Sudoku is a well established and solved puzzle, with a proven efficient way to be solved established. However, there are other admittedly less efficient AI methods which can be applied to solve this and provides an interesting way to apply and experiment with AI methods learnt at university to a real problem.\newline \newline
 Peter Norvig solved Sudoku [], using both constraint propagation and search, so the most efficient method is too established. However, looking at a book[], using a different heuristic search approach seems to be a better way, which has been used before but not fully explored was in there. \newline \newline
